--- a/css/blocks/drop.scss
+++ b/css/blocks/drop.scss
@@ -1,12 +1,30 @@
-/* .drop {
+.drop {
   position: absolute;
-  left: 122px;
+  left: 121px;
   top: 0;
   background: rgba($color: white, $alpha: 0.9);
   border-radius: 5px;
   width: 270px;
   height: 330px;
-  display: none;
+  opacity: 0;
+  transition: 1s ease-out;
+
+  @include tablets {
+    width: 30%;
+    height: 40%;
+    left: 30%;
+    margin-top: -1%;
+  }
+
+  @include phones {
+    width: 40%;
+    height: 50%;
+
+  }
+
+  &__active {
+    opacity: 1;
+  }
 
   &__item {
     display: flex;
@@ -14,8 +32,16 @@
     @include ubuntu;
     justify-content: space-around;
     align-items: center;
-    margin-top: 10px;
+    margin-top: rem(10px);
+    @include phones {
+      margin-top: rem(0px);
+    }
+    
   }
 
-} */
-
+}
+.slider__burger__active {
+  .drop {
+    opacity: 1;
+  }
+}
