--- a/css/blocks/footer.scss
+++ b/css/blocks/footer.scss
@@ -1,10 +1,10 @@
 .footer {
-  background-image: url(./my_page/img/pagefooter/bgfooter.png);
+  background-image: url();
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   position: relative;
-  
+
   &__block {
     position: absolute;
     right: 0;
@@ -16,10 +16,11 @@
     background-size: cover;
   }
 
-  &__container{
+  &__container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
     @include phones {
       display: flex;
       flex-direction: column;
@@ -31,7 +32,7 @@
   &__addres {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;    
+    justify-content: space-between;
     text-align: left;
     @include ubuntu;
     font-size: rem(14px);
@@ -53,7 +54,7 @@
     }
   }
 
-  &__phone_number{
+  &__phone_number {
     font-weight: bold;
     color: $orange;
     padding-left: rem(10px);
@@ -75,9 +76,16 @@
     margin-left: rem(20px);
     opacity: .3;
     transition: .3s;
-      &:hover {
-        opacity: 1;
-      }
+
+    &:hover {
+      opacity: 1;
+    }
   }
+
 }
 
+#map {
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
