--- a/main.css
+++ b/main.css
@@ -1543,7 +1543,7 @@ p {
     letter-spacing: 1.7; }
 
 .footer {
-  background-image: url(./my_page/img/pagefooter/bgfooter.png);
+  background-image: url();
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1645,6 +1645,11 @@ p {
     transition: .3s; }
     .footer__social_icon:hover {
       opacity: 1; }
+
+#map {
+  width: 100%;
+  height: 100%;
+  top: 0; }
 
 .fix__menu {
   position: fixed;
