--- a/css/blocks/duration.scss
+++ b/css/blocks/duration.scss
@@ -1,4 +1,4 @@
-/* .duration {
+.duration {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -48,4 +48,4 @@
       position: absolute;
     }
   }
-} */
+}
