--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -1,4 +1,4 @@
-/* .work {
+.work {
   background-image: url(./my_page/img/pagehowwork/bgwork.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -55,4 +55,4 @@
   min-width: 660px;
   min-height: 370px;
   max-height: 370px;
-} */
+}
