--- a/main.css
+++ b/main.css
@@ -738,7 +738,7 @@ p {
     position: relative; }
   .slider__item {
     display: none; }
-    .slider__item:first-of-type {
+    .slider__item:first-child {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -754,7 +754,7 @@ p {
       -ms-flex-negative: 0;
       flex-shrink: 0; }
       @media screen and (max-width: 768px) {
-        .slider__item:first-of-type {
+        .slider__item:first-child {
           display: -webkit-box;
           display: -ms-flexbox;
           display: flex;
@@ -779,9 +779,7 @@ p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start; }
+    justify-cossssntent: flex-start; }
     @media screen and (max-width: 768px) {
       .slider__burger--img {
         width: 100%;
@@ -910,11 +908,10 @@ p {
         .slider__prise_subtitle {
           font-size: 15px; } }
 
-/* .slider__burger_imsg.drop {
-  display: block;
-}
+.slider__burger_img.drop {
+  display: block; }
 
-.drop {
+/* .drop {
   position: absolute;
   left: 122px;
   top: 0;
@@ -1252,64 +1249,58 @@ p {
     .comment__hover .comment__text > p {
       display: none; } }
 
-/* .work {
+.work {
   background-image: url(./my_page/img/pagehowwork/bgwork.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  position: relative;
-
-  &__title {
+  position: relative; }
+  .work__title {
     text-align: center;
-    padding-bottom: rem(50px);
-
-
-  }
-
-  &__video {
+    padding-bottom: 3.125rem; }
+  .work__video {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    flex-direction: column;
-
-    
-  }
-
-  &__player {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .work__player {
     position: relative;
     max-width: 660px;
-    max-height: 375px;
-
-
-    &_img {
-      fill: rgba($color: $white, $alpha: .8);
+    max-height: 375px; }
+    .work__player_img {
+      fill: rgba(255, 255, 255, 0.8);
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
-
-      &--active {
-        opacity: 0;
-      }
-    }
-  }
-
-  &__toolbar {
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+      .work__player_img--active {
+        opacity: 0; }
+  .work__toolbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 660px;
     height: 40px;
     background-color: #3e3e3e;
-    margin-top: -11px;
-
-  }
-}
+    margin-top: -11px; }
 
 #player {
   min-width: 660px;
   min-width: 660px;
   min-height: 370px;
-  max-height: 370px;
-} */
+  max-height: 370px; }
+
 .form {
   background-image: url(./my_page/img/pageform/bgform.png);
   background-repeat: no-repeat;
@@ -1716,78 +1707,86 @@ p {
 .burger__menu__link:after {
   bottom: 0; }
 
-/* .duration {
+.duration {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  justify-content: center;
-
-  &__img {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .duration__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    padding: rem(20px);
+    padding: 1.25rem;
     cursor: pointer;
-    fill: #626262;
-  }
-
-  &__length {
+    fill: #626262; }
+  .duration__length {
     width: 444px;
     height: 4px;
-    border-radius: rem(1px);
+    border-radius: 0.0625rem;
     background-color: #626262;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
     outline: none;
-    margin-top: rem(5px);
-   
-
-    &--other {
-      width: rem(58px);
-      height: rem(4px);
-    }
-
-    &::-webkit-slider-thumb {
+    margin-top: 0.3125rem; }
+    .duration__length--other {
+      width: 3.625rem;
+      height: 0.25rem; }
+    .duration__length::-webkit-slider-thumb {
       -webkit-appearance: none;
       appearance: none;
       background: #626262;
       cursor: pointer;
-      width: rem(13px);
-      height: rem(13px);
-      border-radius: 50%;
-    }
-  }
-
-  &__citcle {
+      width: 0.8125rem;
+      height: 0.8125rem;
+      border-radius: 50%; }
+  .duration__citcle {
     cursor: pointer;
-    margin-top: rem(-5px);
-    display: block;
-
-    &--heigh {
+    margin-top: -0.3125rem;
+    display: block; }
+    .duration__citcle--heigh {
       right: 0;
-      position: absolute;
-    }
-  }
-} */
-/* .sound {
+      position: absolute; }
+
+.sound {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
-  padding-left: rem(30px);
-
-  &__mic {
+  padding-left: 1.875rem; }
+  .sound__mic {
     cursor: pointer;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    padding: rem(8px);
-    margin-top: rem(4px);
-    fill: #626262;
+    padding: 0.5rem;
+    margin-top: 0.25rem;
+    fill: #626262; }
+  .sound__volume {
+    margin-left: 1.25rem; }
 
-  }
-
-  &__volume {
-    margin-left: rem(20px);
-  }
-} */
 .drop {
   position: absolute;
   left: 121px;
@@ -1834,3 +1833,5 @@ p {
 
 .slider__burger__active .drop {
   opacity: 1; }
+
+/* @import "css/blocks/overley"; */
